--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 body {
-  background-color: black;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
@@ -45,4 +44,40 @@ body {
   font-size: 16px;
   margin-top: 40.7px;
   color: rgba(255, 255, 255, 0.8);
+}
+.button {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+.button-img,
+.button-text {
+  display: inline-block;
+  vertical-align: middle;
+}
+.button-text {
+  font-size: 14px;
+  line-height: 16px;
+  margin-left: 10px;
+}
+.button-primary {
+  color: #8d0019;
+  background-color: #fff;
+}
+.button-link {
+  color: #fff;
+}
+.button-group {
+  margin-top: 70px;
+}
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.blood {
+  background: url("../img/Blood.png") no-repeat top right,
+    black url("../img/Background.jpg") no-repeat center center / 100%;
 }
